data/derived/fa15/progs/unify/prog1204.ml.out
Characters 387-388:
  List.fold_left f base args in res 
                 ^
Error: This expression has type int list -> int * int -> int * int list
       but an expression was expected of type
         int list -> int * int -> int list
       Type int * int list is not compatible with type int list 
